--- a/index.html
+++ b/index.html
@@ -1,93 +1,184 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>J&LSPORT👟</title>
-    <link rel="icon" type="image1" href="/hola.html/img/OIP.jpg">
-    <link rel="stylesheet" href="/style.css">
-</head> 
-<body> 
-      <div class="letra">
-         <img class="image1" src="img/OIP.jpg">
-         <h1>👟J&LSPORT👟</h1>
-         <h2>tu tienda de zapatos favorita y de confianza</h2>
-         <hr>
-         <h3>GUCCI</h3>
-         <img src="/hola.html/download.webp">
-         <h3>PRECIO: 450.000</h3>
-         <hr>
-         <h2>PUMA</h2>
-         <img src="/hola.html/OIF.webp">
-         <h3>PRECIO:130.000</h3>
-         <hr>
-         <h2> NIKE</h2>
-         <img src="/hola.html/OIP.jpg">
-         <h3>PRCIO:210.000</h3>
-         <hr>
-         <h2>ADIDAS</h2>
-         <img src="/hola.html/OIP.webp">
-         <h3>PRECIO:160.000</h3>       
-<section1>
-    <h4 id="marcas">Listado de zapatos que puedes encontrar en nuestra pagina</h4>
-    <ol>
-        <li>NIKE</li>
-        <li>PUMA</li>
-        <li>GUCCI</li>
-        <li>ADIDAS</li>
-        <li>UNDER ARMOUR</li>
-    </ol>
-</section1>
-<br>
-<section>
-<div>
-    <li><a href="https://www.tiktok.com/@joseph..ramirez..20?_t=ZP-8x7prGNrXTC&_r=1" target="_blank" rel="noopener" title="PAGINA JS SPORT👟">LINK DEL TIK TOK DE LA PAGINA</a></li>
-     <li><a href="#tu tienda de zapatos favorita y de confianza">TIENDA</a></li>
-     <li><a href="josephromana969@gmail.com">ENVIANOS UN CORREO</a></li>
-     <li><a href="tel:+573125775491">LLAMANOS AHORA</a></li>
-     <li><a href="https://wa.me/+573125775491/?text=Hola Estoy interesado en tus servicios." target="_blank" title="Enlace Whatsapp">ENVIANOS UN MENNSAJE AL WHATSAPP</a></li>
-     <a href="https://www.nike.com.co/locales" ></a>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Salón de Belleza AFROLAB</title>
+  <link rel="stylesheet" href="/style.css" />
 
-     <a href="https://www.nike.com.co/locales" target="_blank"> <img src="/hola.html/NIKE+FREE+METCON+6+TB.avif" alt="nike" width="300" title="tienda nike"></a>
-     <video controls autoplay loop muted ="portada.jpg" width="640" height="360"> 
-        <source src="/hola.html/Louis Vuitton and Nike _Air Force 1_ by Virgil Abloh _ Savoir-Faire _ LOUIS VUITTON (1).mp4" type="video/mp4">
-        Campista, su navegador no soporta este tipo de videos.
-     </video>
-</div>
-<audio controls autoplay loop mute>
-  <source src="" type="audio/mpeg">
-  Campista, su navegador no soporta este tipo de audio
-</audio>
-</section>
+  
+  <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
+  
+  <script src="https://unpkg.com/lucide@latest"></script>
+</head>
 <body>
-    <h2>SIGNIFICADO DE CADA UNA DE NUESTRAS MARCAS DE ZAPATOS</h2>
-    <dl>
-        <dt>GUCCI</dt>
-        <dd>Gucci es una firma italiana de productos de lujo con sede en Florencia, capital de la región de la Toscana.</dd>
 
-        <dt>PUMA</dt>
-        <dd>n 1924, los hermanos Rudolf Dassler y Adolf "Adi" Dassler habían fundado la empresa Gebrüder Dassler Schuhfabrik (fábrica de zapatos hermanos Dassler), pero en 1948 se separaron en dos empresas independientes: Rudolf Dassler creó Ruda (derivado de su nombre Rudolf Dassler), y Adi Dassler creó Adidas (derivado de su nombre Adi Dassler). Posteriormente, Ruda se convirtió en Puma.</dd>
+  
+  <header class="main-header">
+    <div class="logo">💇‍♀️ AFROLAB</div>
+    <button class="menu-toggle" id="menu-btn" aria-label="Abrir menú">
+      <i data-lucide="menu"></i>
+    </button>
+  </header>
 
-        <dt>NIKE</dt>
-        <dd>En el mundo del deporte una de las marcas comerciales con mayor proyección es Nike. Su actividad se centra en el diseño, venta y distribución de artículos deportivos, muy especialmente las zapatillas. En la actualidad existen más de 700 fábricas en todo el mundo relacionadas con esta marca y en 2017 contaba con más de 55.000 trabajadores.</dd>
+  
+  <nav class="mobile-nav" id="mobile-nav">
+    <ul>
+      <li><a href="#servicios"><i data-lucide="scissors"></i> Servicios</a></li>
+      <li><a href="#equipo"><i data-lucide="users"></i> Nuestro Equipo</a></li>
+      <li><a href="#contacto"><i data-lucide="mail"></i> Contacto</a></li>
+    </ul>
+  </nav>
 
-        <dt>ADIDAS</dt>
-        <dd>La empresa Adidas, fundada en enero de 1949, tiene sus orígenes en las empresas previas de la familia Dassler: la llamada «Gebrüder Dassler Schuhfabrik», fundada a principios de la década de 1920 en Alemania por Adolf "Adi" Dassler ("Adi-das") junto con su hermano Rudolf Dassler. </dd>
-     </dl>
-    <table>
-        <tr >
-            <h4>medios de pago</h4>
-            <th>Nequi</th>
-            <th>Bancolombia</th>
-            <th>Daviplata</th>
-            <th>banco caja social</th>
-        </tr>
-        <tr>
-            <td>+57</td>
-            <td>536</td>
-            <td>444</td>
-            <td>000</td>
-        </tr>
-    </table>
+  
+  <main class="container">
+    <section id="inicio" class="hero" data-aos="fade-up">
+      <h1>Salón de Belleza AFROLAB</h1>
+      <p>Realza tu belleza con nuestros servicios profesionales</p>
+    </section>
+
+    <section id="servicios" data-aos="fade-up">
+      <h2>Servicios</h2>
+      <div class="services">
+        <div class="service">
+          <h3>Corte y Peinado</h3>
+          <p>Estilos modernos y clásicos para todas las edades.</p>
+        </div>
+        <div class="service">
+          <h3>Coloración</h3>
+          <p>Tintes, mechas y balayage con productos de alta calidad.</p>
+        </div>
+        <div class="service">
+          <h3>Manicura y Pedicura</h3>
+          <p>Cuida tus manos y pies con nuestros tratamientos.</p>
+        </div>
+        <div class="service">
+          <h3>Maquillaje</h3>
+          <p>Maquillaje profesional para eventos especiales.</p>
+        </div>
+      </div>
+    </section>
+    
+
+<section id="galeria" class="gallery-section" data-aos="fade-up">
+  <h2>Galería</h2>
+  <div class="gallery">
+    <img src="/2.jpg" alt="Peinado" />
+    <img src="/afro2.jpg" alt="Maquillaje" />
+    <img src="/manos.webp" alt="Manicura" />
+    <img src="/peinado.webp" alt="Coloración" />
+  </div>
+</section>
+
+<section id="testimonios" class="testimonials-section" data-aos="fade-up">
+  <h2>Lo que dicen nuestras clientas</h2>
+  <div class="testimonials">
+    <div class="testimonial">
+      <p>💬 "¡Quedé fascinada con mi nuevo look! Las estilistas son increíbles."</p>
+      <h4>  Carolina G.</h4>
+    </div>
+    <div class="testimonial">
+      <p>💬 "Un servicio espectacular, muy profesionales y amables."</p>
+      <h4>  Daniela R.</h4>
+    </div>
+    <div class="testimonial">
+      <p>💬 "El maquillaje duró toda la noche. ¡Los recomiendo 100%!"</p>
+      <h4>  Mariana V.</h4>
+    </div>
+  </div>
+</section>
+
+  <div class="slider-caption">
+    <h1>Realza tu Belleza</h1>
+    <p>Con nuestros servicios profesionales y estilistas expertos</p>
+  </div>
+</section>
+<section id="reserva" class="reserva-section" data-aos="fade-up">
+  <h2>Reserva tu Cita</h2>
+  <form>
+    <label for="cliente">Nombre:</label>
+    <input type="text" id="cliente" name="cliente" required />
+
+    <label for="servicio">Servicio:</label>
+    <select id="servicio" name="servicio" required>
+      <option value="">--Selecciona--</option>
+      <option value="corte">Corte y Peinado</option>
+      <option value="color">Coloración</option>
+      <option value="manicura">Manicura y Pedicura</option>
+      <option value="maquillaje">Maquillaje</option>
+    </select>
+
+    <label for="fecha">Fecha:</label>
+    <input type="date" id="fecha" name="fecha" required />
+
+    <label for="hora">Hora:</label>
+    <input type="time" id="hora" name="hora" required />
+
+    <button type="submit">Reservar</button>
+  </form>
+</section>
+
+
+    <section id="equipo" data-aos="fade-right">
+      <h2>Nuestro Equipo</h2>
+      <p>Contamos con estilistas certificados y expertos en belleza, listos para asesorarte y brindarte la mejor experiencia.</p>
+    </section>
+
+    <section id="contacto" data-aos="fade-left">
+      <h2>Contacto</h2>
+      <p>Dirección: Calle Belleza 123, Ciudad</p>
+      <p>Teléfono: (555) 123-4567</p>
+      <p>Email: contacto@elegancia.com</p>
+      <form>
+        <label for="nombre">Nombre:</label>
+        <input type="text" id="nombre" name="nombre" required />
+
+        <label for="mensaje">Mensaje:</label>
+        <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
+
+        <button type="submit">Enviar</button>
+      </form>
+    </section>
+  </main>
+
+
+  <a href="https://wa.me/573001234567?text=Hola%20me%20interesa%20un%20servicio%20de%20belleza" 
+     class="whatsapp-float" 
+     target="_blank" 
+     title="Chatea con nosotros por WhatsApp">
+    <img src="https://icongr.am/fontawesome/whatsapp.svg?size=40&color=ffffff" alt="WhatsApp" />
+  </a>
+
+  
+<section id="gamour" data-aos="fade-up">
+  <h2><i class="fas fa-link"></i> barbershop MAMERCO</h2>
+  <p>
+    Visita nuestra barberia .
+  </p>
+  <br>
+  <a href="indss.htm" target="_blank" rel="noopener" class="btn-gamour">
+    <button class="btn">MAMERCO</button>
+  </a>
+</section>
+
+  <footer>
+    <p>&copy; 2025 Salón de Belleza AFROLAB. Todos los derechos reservados.</p>
+    <p>Síguenos:
+      <a href="https://www.facebook.com/share/17ChMw6Pge/?mibextid=wwXIfr">Facebook</a> |
+      <a href="#">Instagram</a> |
+      <a href="#">Twitter</a>
+    </p>
+  </footer>
+
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+    lucide.createIcons();
+    const menuBtn = document.getElementById('menu-btn');
+    const mobileNav = document.getElementById('mobile-nav');
+    menuBtn.addEventListener('click', () => {
+      mobileNav.classList.toggle('active');
+    });
+  </script>
 </body>
 </html>
